fix legend side bar, wrap for general info

--- a/public/styles.css
+++ b/public/styles.css
@@ -46,20 +46,68 @@
     text-decoration: none;
 }
 
-#legend-drop-down p{
-    transform: rotate(-90deg);
+#legend-drop-down {
+    display: flex;
+    margin-top: 35px;
+    margin-left: -38px;
+    gap: 10px;
+}
+
+#legend-drop-down:hover {
+    margin-left: 0px;
+}
+
+.legend {
+    position: absolute;
+    height: fit-content;
+    width: fit-content;
+    left: 0px;
+}
+
+.tags {
+    position: absolute;
+    left: 60px;
+    top: 25px;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    border: 2px solid black;
+    padding: 5px;
+    border-radius: 5px;
+    z-index: 2;
 }
 
 #legend-drop-down {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 12px;
+    background: white;
+    height: fit-content;
+    padding: 3px;
+    border-right: 2px solid black;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    border-radius: 3px;
 }
 
-.drop-down:hover {
-    color: black;
-    text-decoration: none;
+.tags li {
+    list-style-type: none;
+    display:flex;
+    width: 100%;
+    gap: 10px;
+    padding: 5px;
+}
+
+.icon {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 45px;
+    min-width: 45px;
+    height: fit-content;
+}
+
+.tag {
+    display: flex;
+    justify-content: start;
+    align-items: center;
 }
 
 main {
@@ -70,37 +118,8 @@ main {
     height: 100%;
 }
 
-.legend {
+.general {
     display: flex;
-    width: 20%;
-    gap: 1px;
-    height: fit-content;
-    margin-top: 4px;
-    padding: 5px;
-}
-
-.tags {
-    display: flex;
-    flex-direction: column;
-    width: fit-content;
-}
-
-.tags li {
-    list-style-type: none;
-    display:flex;
-    align-items: center;
-    width: 100%;
-    gap: 10px;
-    padding: 2px;
-}
-
-.icon {
-    display: flex;
-    justify-content: flex-end;
-    width: 30%;
-}
-
-.tag {
-    display: flex;
-    justify-content: start;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
